--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+	<div class="box1">
+		3
+	</div>
+	<div class="box2">
+		1
+	</div>
+	<div class="box3">
+		2
+	</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
